picture stretch fix

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -54,15 +54,17 @@ a{
     margin: 5px;
     width: 100%;
     height: 350px;
-    
-
 }
 
 .card-img-overlay{
     position: absolute;
     padding: 0px;
     top: 75%;
-   background-size: cover;
+}
+
+.card-img-top{
+    background-size: auto;
+    height: 350px;
 }
 
 .card-title{
@@ -72,6 +74,10 @@ a{
     font-size: 20pt;
     border:4px solid black 
     
+}
+
+href {
+    background-size: auto;
 }
 
 a :hover{
